--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,26 @@
 }
 
 .card {
-  @apply w-5/6 sm:w-auto bg-white rounded-2xl shadow-lg relative flex flex-col items-center overflow-hidden;
+  @apply w-5/6 sm:w-auto bg-transparent rounded-2xl shadow-lg relative flex flex-col items-center overflow-hidden;
 }
 
 .card-header {
   @apply w-full bg-fuchsia-900 text-white p-4 pt-16 relative;
 }
 
-.input {
+/* .input {
   @apply w-full text-lg outline-none px-4 py-2 border-gray-100 border-b-2 my-4 focus:border-fuchsia-700;
-}
+} */
 
 .btn {
   @apply w-full sm:w-80 text-lg flex justify-around items-center font-semibold my-4;
+}
+
+input:focus-within ~ label,
+input:not(:placeholder-shown) ~ label {
+  @apply transform scale-90 -translate-y-6;
+}
+
+input:focus-within ~ label {
+  @apply text-fuchsia-700;
 }
