--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,21 @@
   @apply w-full bg-fuchsia-900 text-white p-4 pt-16 relative;
 }
 
-/* .input {
-  @apply w-full text-lg outline-none px-4 py-2 border-gray-100 border-b-2 my-4 focus:border-fuchsia-700;
-} */
-
 .btn {
   @apply w-full sm:w-80 text-lg flex justify-around items-center font-semibold my-4;
+}
+
+/* INPUT */
+.inputContainer {
+  @apply relative my-4 border-b-2 text-lg focus-within:border-fuchsia-700;
+}
+
+.input {
+  @apply outline-none block w-full appearance-none focus:outline-none bg-transparent;
+}
+
+.inputLabel {
+  @apply absolute top-0 duration-300 origin-0 -z-1 text-gray-400;
 }
 
 input:focus-within ~ label,
