--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,15 @@
 @tailwind utilities;
 
 .main {
-  @apply min-h-screen w-full flex flex-col justify-center items-center;
+  @apply h-screen w-full flex flex-col justify-center items-center;
 }
 
 .card {
-  @apply relative w-5/6 sm:w-auto bg-transparent rounded-2xl shadow-lg flex flex-col items-center overflow-hidden bg-white;
+  @apply relative w-9/10 flex flex-col justify-center px-6 sm:w-auto rounded-2xl shadow-lg items-center overflow-hidden bg-white;
 }
 
 .card-header {
-  @apply w-full  p-6 pt-16;
+  @apply w-full  p-4 pt-8;
 }
 
 .btn {
@@ -20,7 +20,7 @@
 
 /* INPUT */
 .inputContainer {
-  @apply relative my-4 border-b-2 text-lg focus-within:border-fuchsia-700;
+  @apply relative w-full my-4 border-b-2 text-lg focus-within:border-fuchsia-700;
 }
 
 .input {
