--- a/src/components/views/transaction/Transaction.css
+++ b/src/components/views/transaction/Transaction.css
@@ -4,14 +4,14 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+.type-btn {
+  @apply w-32 p-4 text-xl text-white font-medium;
+}
+
 .form-group {
-  @apply flex flex-col items-center w-full mb-8;
+  @apply flex flex-col border-2 border-gray-300 rounded-md px-2 shadow-sm focus-within:border-sky-700;
 }
 
-.label {
-  @apply text-xl font-semibold text-left w-full;
-}
-
-.text-input {
-  @apply outline-none w-full border-b text-center text-2xl;
+input:focus + label {
+  @apply text-sky-700;
 }
