--- a/src/components/views/transaction/Transaction.css
+++ b/src/components/views/transaction/Transaction.css
@@ -5,11 +5,11 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .type-btn {
-  @apply w-32 p-4 text-xl text-white font-medium;
+  @apply w-32 p-2 text-xl text-white font-medium rounded-md;
 }
 
 .form-group {
-  @apply flex flex-col border-2 border-gray-300 rounded-md px-2 shadow-sm focus-within:border-sky-700;
+  @apply flex flex-col border-2 border-gray-300 rounded-md px-2 shadow-sm focus-within:border-sky-700 mb-4;
 }
 
 input:focus + label {
