--- a/src/components/views/transaction/Transaction.css
+++ b/src/components/views/transaction/Transaction.css
@@ -9,7 +9,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .form-group {
-  @apply flex flex-col border-2 border-gray-300 rounded-md px-2 shadow-sm focus-within:border-sky-700 mb-4;
+  @apply flex flex-col w-full border-2 border-gray-300 rounded-md px-2 shadow-sm focus-within:border-sky-700 mb-4;
 }
 
 input:focus + label {
