Place transaction form on card

--- a/src/components/views/auth/Auth.css
+++ b/src/components/views/auth/Auth.css
@@ -1,5 +1,5 @@
 .main {
-  @apply h-screen w-full flex flex-col justify-center items-center;
+  @apply h-screen w-full flex flex-col justify-center items-center bg-gray-200;
 }
 
 .card {
