--- a/src/components/elements/Nav.css
+++ b/src/components/elements/Nav.css
@@ -1,9 +1,9 @@
 .nav-bar {
-  @apply fixed inset-x-0 bottom-0 bg-white;
+  @apply fixed h-16 inset-x-0 bottom-0 bg-white;
 }
 
 .nav-list {
-  @apply flex justify-around p-2 h-full;
+  @apply flex justify-around items-center h-full;
 }
 
 .nav-icon {
