--- a/src/components/views/account/Account.css
+++ b/src/components/views/account/Account.css
@@ -21,3 +21,7 @@
 .form-field {
   @apply border-b w-full outline-none;
 }
+
+.account-btn {
+  @apply flex justify-center px-4 font-medium text-lg items-center w-[200px] h-10 gap-4 border-b border-gray-300 mb-4 hover:bg-gray-200;
+}
