--- a/src/components/views/account/Account.css
+++ b/src/components/views/account/Account.css
@@ -23,5 +23,9 @@
 }
 
 .account-btn {
-  @apply flex justify-center px-4 font-medium text-lg items-center w-[200px] h-10 gap-4 border-b border-gray-300 mb-4 hover:bg-gray-200;
+  @apply flex justify-center px-4 font-medium text-lg items-center w-[200px] h-10 gap-4 border-b border-gray-300 my-2 hover:bg-gray-200;
+}
+
+.account-confirm-btn {
+  @apply py-1 px-4 border-2 font-medium rounded duration-100;
 }
