--- a/src/components/views/activity/Activity.css
+++ b/src/components/views/activity/Activity.css
@@ -1,3 +1,3 @@
 .donut-btn {
-  @apply px-4 py-1 font-medium border-2 border-blue-500 rounded hover:bg-blue-500 hover:text-white;
+  @apply px-4 py-1 font-medium border-2 border-blue-500 rounded;
 }
